--- a/app/src/main/res/layout/activity_clock.xml
+++ b/app/src/main/res/layout/activity_clock.xml
@@ -6,8 +6,22 @@
     android:layout_height="match_parent"
     tools:context=".activities.ClockActivity">
 
+    <TimePicker
+        android:id="@+id/time_picker"
+        android:timePickerMode="spinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_set_time"
+        android:layout_below="@+id/time_picker"
+        android:layout_centerHorizontal="true"
+        android:text="Đặt giờ"
+        android:layout_marginBottom="5dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
     <com.ducdiep.excustomview.customs.CustomeClock
         android:id="@+id/my_clock"
+        android:layout_below="@id/btn_set_time"
         android:layout_centerInParent="true"
         android:layout_width="300dp"
         android:layout_height="300dp"/>
@@ -65,16 +79,4 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
     </RelativeLayout>
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_set_time"
-        android:layout_below="@+id/layout_time"
-        android:layout_centerHorizontal="true"
-        android:text="Đặt giờ"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-    <TimePicker
-        android:id="@+id/time_picker"
-        android:timePickerMode="spinner"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
 </RelativeLayout>
