--- a/app/src/main/res/layout/activity_lock_pattern.xml
+++ b/app/src/main/res/layout/activity_lock_pattern.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".activities.LockPatternActivity">
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <com.ducdiep.excustomview.customs.CustomLockPattern
+        android:layout_width="match_parent"
+        android:layout_height="500dp"/>
+</LinearLayout>
